hopefully fixed text alignment issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ p {
 }
 
 .box {
-  width: 20vw;
+  width: 22.5vw;
   text-align: center;
 }
 
